--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- Peace'
 - !lcc 'JX'
 - !lcsh 'Peace'
+- GITenberg
 title: An Inquiry into the Nature of Peace and the Terms of Its Perpetuation
 url: http://www.gutenberg.org/ebooks/20694
